# UniWasm

./: LICENSE
A-Frame/: index.html  index.js  index.seml
A-Frame/wasm/: circular_motion.wasm  set_position.wasm  translate_x.wasm
Rust/lib/uni-wasm/: .gitignore  Cargo.toml
Rust/lib/uni-wasm/src/: lib.rs
Rust/samples/: README.md
Rust/samples/fix_local_position/: .gitignore  Cargo.toml  build.bat
Rust/samples/fix_local_position/src/: lib.rs
Rust/samples/fix_transform/: Cargo.toml  build.bat
Rust/samples/fix_transform/src/: lib.rs
Rust/samples/fix_world_position/: Cargo.toml  build.bat
Rust/samples/fix_world_position/src/: lib.rs
Rust/samples/uni-wasm-samples/: Cargo.toml  README.md
Unity/UniWasmApp/: .gitignore
Unity/UniWasmApp/Assets/: UniWasmApp.Dependencies.msb4u.csproj
Unity/UniWasmApp/Assets/UniWasm/: UniWasm.asmdef  package.json
Unity/UniWasmApp/Assets/UniWasm.Examples/: UniWasm.Examples.asmdef
Unity/UniWasmApp/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
Unity/UniWasmQuestSample/: .gitignore  package-lock.json
Unity/UniWasmQuestSample/Assets/: .gitignore
Unity/UniWasmQuestSample/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
WasmSamples/: circular_motion.wasm  index.seml  index.xml  translate_x.wasm
WasmSamples/Gun/: bullet.glb  gun.glb  gun.wasm  gun.xml
WasmSamples/wasm/: fix_local_position.wasm  fix_world_position.wasm
WebEditor/: index.html  index.js
(+30 files in other folders)
