[package]
name = "fix_local_position"
version = "0.1.0"
authors = ["Furuta Yusuke <furuta.yusuke.012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uni-wasm = { path = "../../lib/uni-wasm" }

[lib]
crate-type = ['cdylib']
