[package]
name = "fix_transform"
version = "0.1.0"
authors = ["Furuta Yusuke <furuta.yusuke.012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uni-wasm = { path = "../../lib/uni-wasm" }
once_cell = "1.5.2"
clap = "3.0.0-beta.2"

[lib]
crate-type = ['cdylib']
